syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/DIMO-Network/vehicle-signal-decoding/pkg/grpc";

package grpc;

message PidConfig {
string name = 1;
bytes header = 2;
bytes mode = 3;
bytes pid = 4;
string formula = 5;
int32 interval_seconds = 6;
string protocol = 7;
string signal_name = 8;
int32 bytes_returned = 9;
google.protobuf.Timestamp created_at = 10;
google.protobuf.Timestamp updated_at = 11;

}
message PidSummary {
string name = 1;
bytes header = 2;
bytes mode = 3;
bytes pid = 4;
string formula = 5;
int32 interval_seconds = 6;
string protocol = 7;
string signal_name = 8;

}
message GetPidListRequest {
optional string name = 1;

}
message GetPidListResponse {
repeated PidSummary pid = 1;

}
message GetPidByIDRequest {
string id = 1;

}
message GetPidByIDResponse {
PidConfig pid = 1;

}
message UpdatePidRequest {
PidConfig pid = 1;


}

service PidConfigService {
rpc CreatePid (UpdatePidRequest) returns (google.protobuf.Empty);
rpc UpdatePid (UpdatePidRequest) returns (google.protobuf.Empty);
rpc GetPidList (GetPidListRequest) returns (GetPidListResponse);
rpc GetPidByID (GetPidByIDRequest) returns (GetPidByIDResponse);

}



